# amit-hvac-control-api

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: tui.py
src/amit_hvac_control/: client.py
src/amit_hvac_control/api/: parsing.py  status.py  temperature.py  utils.py  ventilation.py
tests/: test_client.py  test_parsing_errors.py  test_utils.py  test_ventilation.py
