[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "amit_hvac_control"
version = "0.4.0"
authors = [
  { name="Mitch Dries", email="mitch.dries@gmail.com" },
]
description = "Amit HVAC control"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests", "bs4", "aiohttp>=3.9.5"]

[project.urls]
Homepage = "https://github.com/mitch3s/amit-hvac-control"
Issues = "https://github.com/mitch3s/amit-hvac-control/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[dependency-groups]
dev = ["textual>=0.60"]